# FOL-parser

./: CMakeLists.txt  LICENSE  README.md  conanfile.txt
FOL-parser/details/utils/: utility.hpp
FOL-parser/libfol-matcher/: matcher.hpp
FOL-parser/libfol-parser/: lexer.hpp  parser.hpp
FOL-parser/libfol-parser/lexer/: lexer.hpp
FOL-parser/libfol-parser/parser/: exceptions.hpp  parser.hpp  print.hpp  types.hpp
FOL-parser/tests/: lexer.cpp  matcher.cpp  parser.cpp
FirstOrderLogic/: main.cpp
FirstOrderLogic/details/utils/: utility.hpp
FirstOrderLogic/libfol-basictypes/: atom.hpp  basic_clauses_storage.hpp  basic_clauses_storage_factory.hpp  clause.hpp  clauses_storage_factory_interface.hpp  clauses_storage_interface.hpp  function.hpp  short_precedence_clauses_storage.hpp  short_precedence_clauses_storage_factory.hpp  strikeout_clauses_storage.hpp  strikeout_clauses_storage_factory.hpp  support_clauses_storage_factory.hpp  term.hpp  variable.hpp
FirstOrderLogic/libfol-basictypes/src/: atom.cpp  basic_clauses_storage.cpp  basic_clauses_storage_factory.cpp  clause.cpp  function.cpp  short_precedence_clauses_storage.cpp  short_precedence_clauses_storage_factory.cpp  strikeout_clauses_storage.cpp  strikeout_clauses_storage_factory.cpp  support_clauses_storage_factory.cpp  term.cpp
FirstOrderLogic/libfol-matcher/: check_matcher.hpp  matcher.hpp
FirstOrderLogic/libfol-matcher/src/: matcher.cpp
FirstOrderLogic/libfol-parser/lexer/: lexer.hpp
FirstOrderLogic/libfol-parser/lexer/src/: lexer.cpp
FirstOrderLogic/libfol-parser/parser/: parser.hpp  print.hpp  types.hpp
FirstOrderLogic/libfol-parser/parser/src/: parser.cpp  print.cpp  types.cpp
FirstOrderLogic/libfol-prover/: prover.hpp
FirstOrderLogic/libfol-prover/src/: prover.cpp
FirstOrderLogic/libfol-transform/: normalization.hpp  normalized_formula.hpp  replace.hpp
FirstOrderLogic/libfol-transform/src/: normalization.cpp  normalized_formula.cpp
FirstOrderLogic/libfol-unification/: here_unification.hpp  here_unification_factory.hpp  martelli_montanari_unification.hpp  martelli_montanari_unification_factory.hpp  robinson_unification.hpp  robinson_unification_factory.hpp  substitution.hpp  unification_factory_interface.hpp  unification_interface.hpp
FirstOrderLogic/libfol-unification/src/: here_unification.cpp  here_unification_factory.cpp  martelli_montanari_unification.cpp  martelli_montanari_unification_factory.cpp  robinson_unification.cpp  robinson_unification_factory.cpp  unification_interface.cpp
FirstOrderLogic/tests/: lexer.cpp  matcher.cpp  normalization.cpp  parser.cpp  rename_var.cpp  transform_to_cnf.cpp
remade_teorems/: ALG229+1.p  GEO216+1.p  GEO216+2.p  GEO217+1.p  KRS136+1.p  KRS172+1.p  LCL181+1.p  LCL230+1.p  LCL414+1.p  LCL636+1.001.p  LCL648+1.001.p  LCL656+1.005.p  LCL664+1.001.p  LCL666+1.001.p  LCL682+1.001.p  SET899+1.p  SET915+1.p  check_error.custom.p  custom0.p  custom1.p  scr_build_exp.py
